# fitness-tracker-bot

./: .gitignore  README.md  main.py  pyproject.toml
bot/: main.py
bot/db/: __init__.py  db.py
bot/handlers/: start.py  userinfo.py
bot/models/: macronutrients.py  user.py
